--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body, html {
     height: 100%;
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     background-color: #f0f0f0;
   }
   
@@ -13,9 +12,6 @@ body, html {
     height: 80vh; 
     max-height: 480px;
     background-color: #666; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
   }
   
